--- a/package.json
+++ b/package.json
@@ -44,6 +44,6 @@
     "@types/mongoose": "^5.5.6",
     "@types/async": "^3.0.0",
     "@types/bcrypt": "^3.0.0",
-    "@types/multer": "^1.3.7",
+    "@types/multer": "^1.3.7"
   }
 }
