--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn app.ts"
+    "build-ts": "tsc",
+    "debug:server": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn app.ts",
+    "postinstall": "npm run build-ts",
+    "start": "npm run serve",
+    "serve": "node dist/server.js"
   },
   "engines": {
-    "node": "10.x"
+    "node": "10.11.0"
   },
   "author": "gunner",
   "license": "MIT",
