--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "debug:server": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn app.ts",
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
-    "serve": "node server.js"
+    "serve": "node dist/app.js"
   },
   "engines": {
     "node": "10.11.0"
@@ -16,6 +16,7 @@
   "author": "gunner",
   "license": "MIT",
   "dependencies": {
+    "@trongnd/ts-nodemon": "^1.0.3",
     "async": "^3.0.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
@@ -39,7 +40,6 @@
     "typescript": "^3.5.2"
   },
   "devDependencies": {
-    "@trongnd/ts-nodemon": "^1.0.3",
     "@types/cors": "^2.8.5",
     "@types/express": "^4.17.0",
     "@types/express-jwt": "0.0.42",
