--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build-ts": "tsc",
-    "debug:server": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn app.ts",
+    "dev": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn app.ts",
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
     "serve": "node dist/app.js"
