--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build-ts": "tsc",
     "dev": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn app.ts",
     "postinstall": "npm run build-ts",
-    "start": "npm run serve",
+    "start": "ts-node app.ts",
     "serve": "node dist/app.js"
   },
   "engines": {
@@ -36,6 +36,7 @@
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^8.3.0",
     "ts-node-dev": "^1.0.0-pre.40",
     "typegoose": "^5.7.2",
     "typescript": "^3.5.2"
