--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
     "typescript": "^3.5.2"
   },
   "devDependencies": {
+    "@types/async": "^3.0.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.5",
     "@types/express": "^4.17.0",
     "@types/express-jwt": "0.0.42",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.5.6",
-    "@types/async": "^3.0.0",
-    "@types/bcrypt": "^3.0.0",
-    "@types/multer": "^1.3.7"
+    "@types/multer": "^1.3.7",
+    "concurrently": "^4.1.0"
   }
 }
