--- a/package.json
+++ b/package.json
@@ -18,6 +18,15 @@
   "license": "MIT",
   "dependencies": {
     "@trongnd/ts-nodemon": "^1.0.3",
+    "@types/async": "^3.0.0",
+    "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.5",
+    "@types/express": "^4.17.0",
+    "@types/express-jwt": "0.0.42",
+    "@types/jsonwebtoken": "^8.3.2",
+    "@types/mongoose": "^5.5.6",
+    "@types/multer": "^1.3.7",
+    "@types/node": "^8.10.49",
     "async": "^3.0.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
@@ -33,7 +42,6 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "node-cmd": "^3.0.0",
-    "nodemon": "^1.19.1",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.3.0",
@@ -42,14 +50,7 @@
     "typescript": "^3.5.2"
   },
   "devDependencies": {
-    "@types/async": "^3.0.0",
-    "@types/bcrypt": "^3.0.0",
-    "@types/cors": "^2.8.5",
-    "@types/express": "^4.17.0",
-    "@types/express-jwt": "0.0.42",
-    "@types/jsonwebtoken": "^8.3.2",
-    "@types/mongoose": "^5.5.6",
-    "@types/multer": "^1.3.7",
-    "concurrently": "^4.1.0"
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.19.1"
   }
 }
