--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "watch": "concurrently \"npm run ts:watch\" \"npm run serve\"",
     "build": "npm run ts:build",
     "prod:serve": "node dist/app.js",
-    "start": "npm run build && npm run prod:serve",
+    "start": "npm run build && npm run prod:serve"
   },
   "engines": {
     "node": "10.11.0",
