--- a/package.json
+++ b/package.json
@@ -2,15 +2,12 @@
   "name": "portfolioapi",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "start.js",
   "scripts": {
-    "ts:watch": "tsc -w",
-    "ts:build": "tsc",
-    "serve": "nodemon dist/app.js",
-    "watch": "concurrently \"npm run ts:watch\" \"npm run serve\"",
-    "build": "npm run ts:build",
-    "prod:serve": "node dist/app.js",
-    "start": "npm run build && npm run prod:serve"
+    "dev": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn start.ts",
+    "start-server": "ts-node ./start.ts",
+    "start": "node dist/start.js",
+    "postinstall": "tsc"
   },
   "engines": {
     "node": "10.11.0",
@@ -19,14 +16,22 @@
   "author": "gunner",
   "license": "MIT",
   "dependencies": {
+    "@overnightjs/core": "^1.6.9",
+    "@overnightjs/logger": "^1.1.9",
     "@trongnd/ts-nodemon": "^1.0.3",
     "@types/async": "^3.0.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/body-parser": "^1.17.0",
+    "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.5",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/express-jwt": "0.0.42",
+    "@types/http-errors": "^1.6.1",
+    "@types/http-status-codes": "^1.2.0",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.5.6",
+    "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.7",
     "@types/node": "^8.10.49",
     "async": "^3.0.1",
@@ -38,21 +43,25 @@
     "crypto": "^1.0.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "express-jwt": "^5.3.1",
+    "express-promise-router": "^3.0.3",
     "http-errors": "^1.7.2",
+    "http-status-codes": "^1.3.2",
     "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "node-cmd": "^3.0.0",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
-    "ts-node": "^8.3.0",
-    "ts-node-dev": "^1.0.0-pre.40",
     "typegoose": "^5.7.2",
     "typescript": "^3.5.2"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "ts-node": "^8.3.0",
+    "ts-node-dev": "^1.0.0-pre.40",
+    "tslint": "^5.18.0"
   }
 }
