initial test for deployment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
         "experimentalDecorators": true,
         "suppressImplicitAnyIndexErrors": true,
         "noImplicitAny": true,
-        "watch": true,
+        "watch": false,
         "skipLibCheck": true,
         "target": "es6",
         "typeRoots": [
