--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,12 +22,7 @@
             "es2017",
             "dom"
         ],
-        "baseUrl": "src",
-        "paths": {
-            "@/*": [
-                "app/*"
-            ]
-        },
+        "baseUrl": "./",
         "types": ["node"]
     }
 }
