--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build-ts": "tsc",
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
-    "serve": "node start.js",
-    "watch-node": "nodemon start.js",
+    "serve": "node dist/start.js",
+    "watch-node": "nodemon dist/start.js",
     "watch-ts": "tsc -w",
     "start-server": "ts-node ./start.ts",
     "dev": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn start.ts"
