add script to package.json for copying folder to dist/ folder after typescript compilation

--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "description": "",
   "main": "start.js",
   "scripts": {
-    "build-ts": "tsc",
+    "build-ts": "tsc && npm run cp",
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
     "serve": "node dist/start.js",
     "watch-node": "nodemon dist/start.js",
     "watch-ts": "tsc -w",
     "start-server": "ts-node ./start.ts",
-    "dev": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn start.ts"
+    "dev": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn start.ts",
+    "cp": "cp -r repository dist/src/controllers/coolshare"
   },
   "engines": {
     "node": "10.11.0",
