--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "",
   "main": "start.js",
   "scripts": {
-    "build-ts": "tsc && npm run cp",
+    "build-ts": "tsc && npm run copy-repo",
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
     "serve": "node dist/start.js",
@@ -14,7 +14,7 @@
     "watch-ts": "tsc -w",
     "start-server": "ts-node ./start.ts",
     "dev": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn start.ts",
-    "cp": "cp -r src/controllers/coolshare/repository dist/src/controllers/coolshare"
+    "copy-repo": "cp -r -v src/controllers/coolshare/repository dist/src/controllers/coolshare"
   },
   "engines": {
     "node": "10.11.0",
