--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "express-async-handler": "^1.1.4",
     "express-jwt": "^5.3.1",
     "express-promise-router": "^3.0.3",
+    "fs-extra": "^8.1.0",
     "http-errors": "^1.7.2",
     "http-status-codes": "^1.3.2",
     "jsonwebtoken": "^8.5.1",
@@ -64,6 +65,7 @@
     "typescript": "^3.5.2"
   },
   "devDependencies": {
+    "@types/fs-extra": "^8.0.0",
     "concurrently": "^4.1.0",
     "nodemon": "^1.19.1",
     "ts-node": "^8.3.0",
