--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/async": "^3.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.0",
+    "@types/compression": "0.0.36",
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.5",
     "@types/dotenv": "^6.1.1",
@@ -42,6 +43,7 @@
     "async": "^3.0.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
@@ -61,7 +63,7 @@
     "node-cmd": "^3.0.0",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
-    "typegoose": "^5.7.2",
+    "typegoose": "^5.8.1",
     "typescript": "^3.5.2"
   },
   "devDependencies": {
