--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "",
   "main": "start.js",
   "scripts": {
-    "build-ts": "tsc && npm run copy-repo",
+    "build-ts": "npm run build && mkdir dist/coolshare && npm run copy-repo2",
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
     "serve": "node dist/start.js",
@@ -14,7 +14,9 @@
     "watch-ts": "tsc -w",
     "start-server": "ts-node ./start.ts",
     "dev": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn start.ts",
-    "copy-repo": "cp -r -v src/controllers/coolshare/repository dist/src/controllers/coolshare"
+    "copy-repo": "cp -r -v src/controllers/coolshare/repository dist/src/controllers/coolshare",
+    "copy-repo2": "cp -r -v src/controllers/coolshare/repository dist/coolshare",
+    "build": "webpack"
   },
   "engines": {
     "node": "10.11.0",
@@ -39,7 +41,8 @@
     "@types/mongoose": "^5.5.6",
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.7",
-    "@types/node": "^8.10.49",
+    "@types/node": "^8.10.51",
+    "@types/webpack-node-externals": "^1.6.3",
     "async": "^3.0.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
@@ -64,14 +67,19 @@
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
     "typegoose": "^5.8.1",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.2",
+    "webpack": "^4.36.1",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "@types/fs-extra": "^8.0.0",
+    "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^4.1.0",
     "nodemon": "^1.19.1",
+    "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
     "ts-node-dev": "^1.0.0-pre.40",
-    "tslint": "^5.18.0"
+    "tslint": "^5.18.0",
+    "webpack-cli": "^3.3.6"
   }
 }
