--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
     "serve": "node dist/start.js",
-    "watch-node": "nodemon dist/start.js",
+    "watch-node": "nodemon dist/server.js",
     "watch-ts": "tsc -w",
     "start-server": "ts-node ./start.ts",
     "dev": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn start.ts",
