--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "",
   "main": "start.js",
   "scripts": {
-    "build-ts": "tsc && npm run copy-repo",
+    "build-ts": "tsc && npm run copy-repo && npm run make-upload-dir",
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
     "serve": "node dist/start.js",
@@ -15,7 +15,8 @@
     "start-server": "ts-node ./start.ts",
     "dev": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn start.ts",
     "copy-repo": "cp -r -v src/controllers/coolshare/repository dist/src/controllers/coolshare",
-    "copy-repo2": "cp -r -v src/controllers/coolshare/repository dist/coolshare"
+    "copy-repo2": "cp -r -v src/controllers/coolshare/repository dist/coolshare",
+    "make-upload-dir": "mkdir dist/uploads"
   },
   "engines": {
     "node": "10.11.0",
