--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/http-errors": "^1.6.1",
     "@types/http-status-codes": "^1.2.0",
     "@types/jsonwebtoken": "^8.3.2",
+    "@types/mime": "^2.0.1",
     "@types/mongoose": "^5.5.6",
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.7",
@@ -60,6 +61,7 @@
     "http-errors": "^1.7.2",
     "http-status-codes": "^1.3.2",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.4.4",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
