--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,13 +31,14 @@
         {
             "type": "node",
             "request": "attach",
-            "name": "Attach to Process",
+            "name": "Heroku",
             "address": "localhost",
-            "restart": false,
+            "port": 9229,
+            "protocol": "inspector",
+            "localRoot": "${workspaceFolder}",
             "sourceMaps": false,
-            "localRoot": "${workspaceRoot}",
-            "remoteRoot": null,
-            "port": 9090
-        }
+            "remoteRoot": "/",
+            "restart": false
+        },
     ]
 }
