--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
         "noImplicitAny": true,
         "watch": false,
         "skipLibCheck": true,
-        "target": "es6",
+        "target": "esnext",
         "typeRoots": [
             "node_modules/@types"
         ],
