--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "npm run serve",
     "serve": "node dist/start.js",
     "watch-node": "nodemon dist/start.js",
+    "debug:remote": "heroku ps:forward 9229 -a portfolioapis",
     "watch-ts": "tsc -w",
     "start-server": "ts-node ./start.ts",
     "dev": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn start.ts",
