testing deployment with es5 target in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
         "noImplicitAny": true,
         "watch": false,
         "skipLibCheck": true,
-        "target": "esnext",
+        "target": "es5",
         "typeRoots": [
             "node_modules/@types"
         ],
