--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "checkJs": true,
         "allowJs": true,
         "declaration": false,
-        "module": "es2015",
+        "module": "commonjs",
         "moduleResolution": "node",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
