--- a/package.json
+++ b/package.json
@@ -58,18 +58,24 @@
     "express-async-handler": "^1.1.4",
     "express-jwt": "^5.3.1",
     "express-promise-router": "^3.0.3",
+    "filepreview-es6": "^1.0.8",
     "fs-extra": "^8.1.0",
     "http-errors": "^1.7.2",
     "http-status-codes": "^1.3.2",
+    "image-thumbnail": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.12",
     "mime": "^2.4.4",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "node-cmd": "^3.0.0",
+    "node-thumbnail": "^0.15.0",
     "path": "^0.12.7",
+    "pretty-file-icons": "^2.2.1",
     "reflect-metadata": "^0.1.13",
+    "thumbnail": "^0.1.9",
     "typegoose": "^5.8.1",
     "typescript": "^3.5.2",
     "webpack": "^4.36.1",
