--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "",
   "main": "start.js",
   "scripts": {
-    "build-ts": "rm -rf dist/* && tsc && npm run copy-repo && npm run make-upload-dir",
+    "build-ts": "rm -rf dist/* && tsc && npm run copy-repo && npm run make-directories && npm run copy-thumbnail-images",
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
     "serve": "node dist/start.js",
@@ -17,7 +17,8 @@
     "dev": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn start.ts",
     "copy-repo": "cp -r -v src/controllers/coolshare/repository dist/src/controllers/coolshare",
     "copy-repo2": "cp -r -v src/controllers/coolshare/repository dist/coolshare",
-    "make-upload-dir": "mkdir dist/uploads"
+    "make-directories": "mkdir dist/uploads && mkdir dist/thumbnails",
+    "copy-thumbnail-images": "cp -r -v thumbnails/* dist/thumbnails"
   },
   "engines": {
     "node": "10.11.0",
@@ -49,6 +50,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "convert-svg-to-png": "^0.5.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
@@ -58,11 +60,9 @@
     "express-async-handler": "^1.1.4",
     "express-jwt": "^5.3.1",
     "express-promise-router": "^3.0.3",
-    "filepreview-es6": "^1.0.8",
     "fs-extra": "^8.1.0",
     "http-errors": "^1.7.2",
     "http-status-codes": "^1.3.2",
-    "image-thumbnail": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.12",
     "mime": "^2.4.4",
@@ -71,11 +71,10 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "node-cmd": "^3.0.0",
-    "node-thumbnail": "^0.15.0",
     "path": "^0.12.7",
     "pretty-file-icons": "^2.2.1",
+    "quicklook-thumbnail": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "thumbnail": "^0.1.9",
     "typegoose": "^5.8.1",
     "typescript": "^3.5.2",
     "webpack": "^4.36.1",
