--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.7",
     "@types/node": "^8.10.51",
+    "@types/uuid": "^3.4.5",
     "@types/webpack-node-externals": "^1.6.3",
     "async": "^3.0.1",
     "bcrypt": "^3.0.6",
@@ -77,6 +78,7 @@
     "reflect-metadata": "^0.1.13",
     "typegoose": "^5.8.1",
     "typescript": "^3.5.2",
+    "uuid": "^3.3.3",
     "webpack": "^4.36.1",
     "webpack-node-externals": "^1.7.2"
   },
