--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "description": "",
   "main": "start.js",
   "scripts": {
+    "test:jasmine": "ts-node node_modules/jasmine/bin/jasmine --config=jasmine.json",
+    "test:mocha": "mocha -w -r ts-node/register src/**/*controller.spec.ts",
+    "test:jest": "jest --watch --detectOpenHandles",
     "build-ts": "rm -rf dist/* && tsc && npm run copy-repo && npm run make-directories && npm run copy-thumbnail-images",
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
@@ -24,6 +27,12 @@
     "node": "12.8.0",
     "npm": "6.11.3"
   },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
+  },
   "dependencies": {
     "@hasezoey/typegoose": "^5.9.2",
     "@overnightjs/core": "^1.6.9",
@@ -40,12 +49,14 @@
     "@types/express-jwt": "0.0.42",
     "@types/http-errors": "^1.6.1",
     "@types/http-status-codes": "^1.2.0",
+    "@types/jest": "^24.0.18",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mime": "^2.0.1",
     "@types/mongoose": "^5.5.6",
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.7",
     "@types/node": "^8.10.51",
+    "@types/request": "^2.48.3",
     "@types/uuid": "^3.4.5",
     "@types/webpack-node-externals": "^1.6.3",
     "async": "^3.0.1",
@@ -77,6 +88,8 @@
     "pretty-file-icons": "^2.2.1",
     "quicklook-thumbnail": "^1.0.0",
     "reflect-metadata": "^0.1.13",
+    "request": "^2.88.0",
+    "thumbnail": "^0.1.9",
     "typescript": "^3.5.2",
     "uuid": "^3.3.3",
     "webpack": "^4.36.1",
@@ -84,11 +97,15 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^8.0.0",
+    "@types/supertest": "^2.0.8",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^4.1.0",
+    "jest": "^24.9.0",
     "nodemon": "^1.19.1",
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.1.0",
     "ts-loader": "^6.0.4",
-    "ts-node": "^8.3.0",
+    "ts-node": "^8.4.1",
     "ts-node-dev": "^1.0.0-pre.40",
     "tslint": "^5.18.0",
     "webpack-cli": "^3.3.6"
