--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,15 +13,15 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "suppressImplicitAnyIndexErrors": true,
-        "noImplicitAny": true,
+        "noImplicitAny": false,
         "watch": false,
         "skipLibCheck": true,
-        "target": "esnext",
+        "target": "es6",
         "typeRoots": [
             "node_modules/@types"
         ],
         "lib": [
-            "es2017",
+            "es2018",
             "dom"
         ],
         "paths": {
@@ -29,10 +29,7 @@
                 "src/*"
             ]
         },
-        "baseUrl": "./",
-        "types": [
-            "node"
-        ]
+        "baseUrl": "./"
     }
     
 }
