Integrated renameEntity action method for renaming files and folders in the filesystem, as well as the entities in the database. if the entity is a folder, the action method will recreate the paths for the entities that are dependents on the parent folder being renamed, in order to preserve navigation functionality in the view

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,21 @@
             ]
         },
         {
+            "name": "PortfolioAPIs Cluster: Debug Server",
+            "type": "node",
+            "request": "launch",
+            "program": "${workspaceFolder}/start.ts",
+            "autoAttachChildProcesses": true,
+            "sourceMaps": true,
+            "skipFiles": [
+                "${workspaceRoot}/node_modules/**/*.js",
+                "<node_internals>/**/*.js"
+            ],
+            "outFiles": [
+                "${workspaceFolder}/dist/*.js"
+            ]
+        },
+        {
             "type": "node",
             "request": "launch",
             "name": "Debug TypeScript in Node.js",
