--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "description": "",
   "main": "start.js",
   "scripts": {
-    "test:jasmine": "ts-node node_modules/jasmine/bin/jasmine --config=jasmine.json",
-    "test:mocha": "mocha -w -r ts-node/register src/**/*controller.spec.ts",
-    "test:jest": "jest --watch --detectOpenHandles",
+    "test:jest": "jest --watch --detectOpenHandles --runInBand",
     "build-ts": "rm -rf dist/* && tsc && npm run copy-repo && npm run make-directories && npm run copy-thumbnail-images",
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
