Added new meeting controller and provider for handling meeting related db operations, and socket io signaling for meetilly app coming to the portfolio

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,12 +24,17 @@
             "es2018",
             "dom"
         ],
+        "baseUrl": "./src",
         "paths": {
-            "@/*": [
-                "src/*"
+            "@controllers/*": [
+                "controllers/*"
+            ],
+            "@models/*": [
+                "models/*"
+            ],
+            "@middleware/*": [
+                "middleware/*"
             ]
-        },
-        "baseUrl": "./"
+        }
     }
-    
 }
