--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "start.js",
+  "repository": "portfolioapis",
   "scripts": {
     "test:jest": "jest --watch --detectOpenHandles --runInBand",
     "build:webpack": "webpack",
@@ -17,10 +18,12 @@
     "watch-ts": "tsc -w",
     "start-server": "ts-node ./start.ts",
     "dev": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn start.ts",
-    "copy-repo": "cp -r -v src/controllers/coolshare/repository dist/src/controllers/coolshare",
-    "copy-repo2": "cp -r -v src/controllers/coolshare/repository dist/coolshare",
+    "copy-repo": "cp -r src/controllers/coolshare/repository dist/src/controllers/coolshare",
+    "copy-repo2": "cp -r src/controllers/coolshare/repository dist/coolshare",
     "make-directories": "mkdir dist/uploads && mkdir dist/thumbnails",
-    "copy-thumbnail-images": "cp -r -v thumbnails/* dist/thumbnails"
+    "copy-thumbnail-images": "cp -r thumbnails/* dist/thumbnails",
+    "wp:build": "webpack --config webpack.config.js",
+    "wp:start": "node --inspect dist/main.js"
   },
   "engines": {
     "node": "12.8.0",
@@ -33,6 +36,8 @@
     ]
   },
   "dependencies": {
+    "@decorators/di": "^1.0.2",
+    "@decorators/socket": "^3.2.0",
     "@hasezoey/typegoose": "^5.9.2",
     "@overnightjs/core": "^1.6.9",
     "@overnightjs/logger": "^1.1.9",
@@ -47,36 +52,32 @@
     "@types/express": "^4.17.0",
     "@types/express-jwt": "0.0.42",
     "@types/http-errors": "^1.6.1",
-    "@types/http-status-codes": "^1.2.0",
     "@types/jest": "^24.0.18",
     "@types/jsonwebtoken": "^8.3.2",
+    "@types/md5": "^2.1.33",
     "@types/mime": "^2.0.1",
     "@types/mongoose": "^5.5.6",
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.7",
     "@types/node": "^8.10.51",
     "@types/request": "^2.48.3",
+    "@types/socket.io": "^2.1.4",
     "@types/uuid": "^3.4.5",
-    "@types/webpack-node-externals": "^1.6.3",
     "async": "^3.0.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "convert-svg-to-png": "^0.5.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
-    "crypto": "^1.0.1",
     "dotenv": "^8.0.0",
-    "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-jwt": "^5.3.1",
     "express-promise-router": "^3.0.3",
     "fs-extra": "^8.1.0",
     "http-errors": "^1.7.2",
-    "http-status-codes": "^1.3.2",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.12",
+    "md5": "^2.2.1",
     "mime": "^2.4.4",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.0",
@@ -84,16 +85,10 @@
     "multer": "^1.4.1",
     "node-cmd": "^3.0.0",
     "path": "^0.12.7",
-    "pretty-file-icons": "^2.2.1",
-    "quicklook-thumbnail": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "request": "^2.88.0",
     "socket-controllers": "0.0.5",
-    "thumbnail": "^0.1.9",
     "typescript": "^3.5.2",
-    "uuid": "^3.3.3",
-    "webpack": "^4.36.1",
-    "webpack-node-externals": "^1.7.2"
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@types/fs-extra": "^8.0.0",
@@ -101,13 +96,15 @@
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^4.1.0",
     "jest": "^24.9.0",
-    "nodemon": "^1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "^24.1.0",
-    "ts-loader": "^6.0.4",
+    "ts-loader": "^6.2.1",
     "ts-node": "^8.4.1",
     "ts-node-dev": "^1.0.0-pre.40",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "tslint": "^5.18.0",
-    "webpack-cli": "^3.3.6"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-node-externals": "^1.7.2"
   }
 }
