Updated downloadItem Action method to handle folder downloads, by generating and sending a zip file to the client

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@overnightjs/core": "^1.6.9",
     "@overnightjs/logger": "^1.1.9",
     "@trongnd/ts-nodemon": "^1.0.3",
+    "@types/archiver": "^3.0.0",
     "@types/async": "^3.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.0",
@@ -63,6 +64,7 @@
     "@types/request": "^2.48.3",
     "@types/socket.io": "^2.1.4",
     "@types/uuid": "^3.4.5",
+    "archiver": "^3.1.1",
     "async": "^3.0.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
