--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,18 @@
 {
     "compileOnSave": false,
     "exclude": [
-        "dist", 
-        "webpack.config.js", 
-        "temp", 
-        // "./src/controllers/coolshare/repository",
+        "dist",
+        "webpack.config.js",
+        "temp",
+        "./src/controllers/coolshare/repository",
         "webpack.**.js"
     ],
     "compilerOptions": {
         "outDir": "./dist",
-        "incremental": true,
         "sourceMap": true,
-        // "declaration": true,
         "checkJs": true,
         "allowJs": true,
+        "declaration": false,
         "module": "commonjs",
         "moduleResolution": "node",
         "emitDecoratorMetadata": true,
@@ -25,7 +24,6 @@
         "target": "es6",
         "typeRoots": [
             "node_modules/@types",
-            
         ],
         "lib": [
             "es2018",
@@ -33,9 +31,15 @@
         ],
         "baseUrl": "./src",
         "paths": {
-            "@controllers/*": ["controllers/*"],
-            "@models/*": ["models/*"],
-            "@middleware/*": ["middleware/*"]
+            "@controllers/*": [
+                "controllers/*"
+            ],
+            "@models/*": [
+                "models/*"
+            ],
+            "@middleware/*": [
+                "middleware/*"
+            ]
         }
     }
 }
