testing deployment with current state

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compileOnSave": false,
     "exclude": [
         "dist",
-        "webpack.config.js",
+        "build/webpack.config.js",
         "temp",
         "./src/controllers/coolshare/repository",
         "webpack.**.js"
