--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "crawler": "^1.2.1",
     "cross-env": "^6.0.3",
     "dotenv": "^8.0.0",
     "express-async-handler": "^1.1.4",
