--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-node_modules
-dist
+
+/node_modules
+/dist
+
 npm-debug.log
 .DS_Store
 /*.env
@@ -8,3 +10,6 @@ npm-debug.log
 webpack.config.js
 nodemon.json
 jest.config.js
+
+.buildpacks
+Aptfile
