--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   "repository": "portfolioapis",
   "scripts": {
     "test:jest": "jest --watch --detectOpenHandles --runInBand",
-    "build:dev": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn start.ts",
-    "build:prod": "rm -rf dist/* && tsc && npm run make:folder-structure",
-    "postinstall": "npm run build:prod",
+    "serve": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn start.ts",
+    "build": "rm -rf dist/* && tsc && npm run make:folder-structure",
+    "heroku-postbuild": "npm run build:prod",
     "start-server": "ts-node ./start.ts",
-    "copy:repository": "cp -r src/controllers/coolshare/repository dist/src/controllers/coolshare",
+    "copy:repo:coolshare": "cp -r src/controllers/coolshare/repository dist/src/controllers/coolshare",
+    "copy:repo:streamly": "cp -r src/controllers/streamly/repository dist/src/controllers/streamly",
     "copy:thumbnails": "cp -r thumbnails dist/thumbnails",
-    "make:folder-structure": "npm run copy:repository && npm run make:directories && npm run copy:thumbnails",
+    "make:folder-structure": "npm run copy:repo:coolshare && npm run copy:repo:streamly && npm run make:directories && npm run copy:thumbnails",
     "make:directories": "mkdir dist/uploads && mkdir dist/src/controllers/coolshare/temp",
     "wp:build": "webpack --config webpack.dev.js && npm run make:directories",
     "wp:start": "npm run make-dir-structure && node dist/main"
@@ -35,11 +36,8 @@
     "@middleware": "src/middleware"
   },
   "dependencies": {
-    "@decorators/di": "^1.0.2",
-    "@decorators/socket": "^3.2.0",
     "@overnightjs/core": "^1.6.9",
     "@overnightjs/logger": "^1.1.9",
-    "@trongnd/ts-nodemon": "^1.0.3",
     "@typegoose/typegoose": "^6.2.0",
     "@types/archiver": "^3.0.0",
     "@types/async": "^3.0.0",
@@ -50,17 +48,11 @@
     "@types/cors": "^2.8.5",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
-    "@types/express-jwt": "0.0.42",
-    "@types/http-errors": "^1.6.1",
-    "@types/jest": "^24.0.18",
     "@types/jsonwebtoken": "^8.3.2",
-    "@types/md5": "^2.1.33",
     "@types/mime": "^2.0.1",
     "@types/mongoose": "^5.5.6",
-    "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.7",
     "@types/node": "^8.10.51",
-    "@types/request": "^2.48.3",
     "@types/socket.io": "^2.1.4",
     "@types/uuid": "^3.4.5",
     "archiver": "^3.1.1",
@@ -73,44 +65,32 @@
     "crawler": "^1.2.1",
     "cross-env": "^6.0.3",
     "dotenv": "^8.0.0",
-    "express-async-handler": "^1.1.4",
-    "express-jwt": "^5.3.1",
-    "express-promise-router": "^3.0.3",
     "filepreview-es6": "^1.0.8",
-    "fs-extra": "^8.1.0",
     "helmet": "^3.21.2",
-    "http-errors": "^1.7.2",
     "jsonwebtoken": "^8.5.1",
-    "md5": "^2.2.1",
     "mime": "^2.4.4",
-    "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.8.3",
-    "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "node-cmd": "^3.0.0",
-    "path": "^0.12.7",
     "pretty-file-icons": "^2.2.1",
-    "reflect-metadata": "^0.1.13",
     "socket-controllers": "0.0.5",
-    "typescript": "^3.5.2",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@types/fs-extra": "^8.0.0",
+    "@types/jest": "^24.0.18",
+    "@types/morgan": "^1.7.35",
     "@types/supertest": "^2.0.8",
     "clean-webpack-plugin": "^3.0.0",
-    "concurrently": "^4.1.0",
-    "jest": "^24.9.0",
+    "fs-extra": "^8.1.0",
+    "morgan": "^1.9.1",
     "supertest": "^4.0.2",
-    "ts-jest": "^24.1.0",
-    "ts-loader": "^6.2.1",
+    "ts-jest": "^25.3.0",
     "ts-node": "^8.5.4",
     "ts-node-dev": "^1.0.0-pre.44",
-    "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "tslint": "^5.18.0",
+    "typescript": "^3.5.2",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
     "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2"
   }
